--- a/index.html
+++ b/index.html
@@ -4,66 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- div for the header area -->
     <div class="header_area">
-        <span>Header Logo</span>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+        <div class="header_top">
+            <span class="header_logo">Header Logo</span>
+            <ul class="header_links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
 
-        <h1>This website is awesome</h1>
-        <p>
-            This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast
-        </p>
-        <button>Sing up</button>
-        <img src="" alt="">
+        <div class="header_bottom">
+            <div class="header_info">
+                <h1 class="header_title">This website is awesome</h1>
+                <p class="header_description">
+                    This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast
+                </p>
+                <button class="header_button">Sing up</button>
+            </div>
+            <!-- <img src="" alt="" class="header_image"> -->
+            <div class="placeholder_image">This is a placeholder for an image</div>
+        </div>
     </div>
 
     <!-- div for the information area -->
     <div class="info_area">
-        <h2>Some random information.</h2>
+        <h2 class="info_title">Some random information.</h2>
 
-        <div class="image_and_text">
-            <img src="" alt="">
-            <p>
-                This is some subtext under an illustration or image
-            </p>
-        </div>
-        <div class="image_and_text">
-            <img src="" alt="">
-            <p>
-                This is some subtext under an illustration or image
-            </p>
-        </div>
-        <div class="image_and_text">
-            <img src="" alt="">
-            <p>
-                This is some subtext under an illustration or image
-            </p>
-        </div>
-        <div class="image_and_text">
-            <img src="" alt="">
-            <p>
-                This is some subtext under an illustration or image
-            </p>
+        <div class="info_images">
+            <div class="image_and_text">
+                <!-- <img src="" alt=""> -->
+                <div class="info_div"></div>
+                <p class="info_paragraph">
+                    This is some subtext under an illustration or image
+                </p>
+            </div>
+            <div class="image_and_text">
+                <!-- <img src="" alt=""> -->
+                <div class="info_div"></div>
+                <p class="info_paragraph">
+                    This is some subtext under an illustration or image
+                </p>
+            </div>
+            <div class="image_and_text">
+                <!-- <img src="" alt=""> -->
+                <div class="info_div"></div>
+                <p class="info_paragraph">
+                    This is some subtext under an illustration or image
+                </p>
+            </div>
+            <div class="image_and_text">
+                <!-- <img src="" alt=""> -->
+                <div class="info_div"></div>
+                <p class="info_paragraph">
+                    This is some subtext under an illustration or image
+                </p>
+            </div>
         </div>
     </div>
 
     <!-- div for the quote area -->
     <div class="quote_area">
-        <q>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</q>
-        <div>-Thor, God of Thunder</div>
+        <div class="container">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+            <div>-Thor, God of Thunder</div>
+        </div>
     </div>
 
     <!-- div for the call to action area -->
     <div class="call_to_action_area">
         <div class="call_to_action">
-            <h4>Call to action! It's time!</h4>
-            <div>Sign up for our product by clicking that button over there!</div>
+            <div class="left_side">
+                <h4>Call to action! It's time!</h4>
+                <div class="call_to_action_description">Sign up for our product by clicking that button over there!</div>
+            </div>
             <button>Sign Up</button>
         </div>
     </div>
