Add a few images to the landing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- div for the header area -->
     <div class="header_area">
         <div class="header_top">
-            <span class="header_logo">Header Logo</span>
+            <span class="header_logo"><img src="imgs/logo.png" alt="Simple logo created for the project"></span>
             <ul class="header_links">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
@@ -27,8 +27,8 @@
                 </p>
                 <button class="header_button">Sing up</button>
             </div>
-            <!-- <img src="" alt="" class="header_image"> -->
-            <div class="placeholder_image">This is a placeholder for an image</div>
+            <img src="imgs/header_image.jpg" alt="A computer monitors and glasses on top of a table. You can see some code in the monitor although the code is a bit blurry, except when you look it through the glasses lenses"class="header_image">
+            <!-- <div class="placeholder_image">This is a placeholder for an image</div> -->
         </div>
     </div>
 
@@ -39,28 +39,28 @@
         <div class="info_images">
             <div class="image_and_text">
                 <!-- <img src="" alt=""> -->
-                <div class="info_div"></div>
+                <img src="imgs/info_image_1_resized.jpg" alt="" class="info_image">
                 <p class="info_paragraph">
                     This is some subtext under an illustration or image
                 </p>
             </div>
             <div class="image_and_text">
                 <!-- <img src="" alt=""> -->
-                <div class="info_div"></div>
+                <img src="imgs/info_image_2_resized.jpg" alt="" class="info_image">
                 <p class="info_paragraph">
                     This is some subtext under an illustration or image
                 </p>
             </div>
             <div class="image_and_text">
                 <!-- <img src="" alt=""> -->
-                <div class="info_div"></div>
+                <img src="imgs/info_image_3_resized.jpg" alt="" class="info_image">
                 <p class="info_paragraph">
                     This is some subtext under an illustration or image
                 </p>
             </div>
             <div class="image_and_text">
                 <!-- <img src="" alt=""> -->
-                <div class="info_div"></div>
+                <img src="imgs/info_image_4_resized.jpg" alt="" class="info_image">
                 <p class="info_paragraph">
                     This is some subtext under an illustration or image
                 </p>
